tests/NormalTests/paczka1/small_fuzzy/57136733.err
Error in line 7: BsTrG S711 85,1
Error in line 8: BsTrG A242 61,1
